# az-scout-plugin-network-cost

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/az_scout_network_cost/: __init__.py  _log.py  insights.py  models.py  parsers.py  price_fetcher.py  pricing.py  routes.py  tools.py
src/az_scout_network_cost/static/css/: network-cost.css
src/az_scout_network_cost/static/html/: network-cost-tab.html
src/az_scout_network_cost/static/js/: network-cost-tab.js
tests/: test_pricing.py
