[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "az-scout-plugin-network-cost"
dynamic = ["version"]
description = "az-scout plugin for Azure VNet peering cost estimation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "az-scout",
    "fastapi",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/az-scout/az-scout-plugin-network-cost"
Repository = "https://github.com/az-scout/az-scout-plugin-network-cost"
Issues = "https://github.com/az-scout/az-scout-plugin-network-cost/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "httpx>=0.28",
]

[project.entry-points."az_scout.plugins"]
network_cost = "az_scout_network_cost:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_network_cost"]

[tool.hatch.version]
source = "vcs"
raw-options.version_scheme = "guess-next-dev"
raw-options.local_scheme = "no-local-version"
raw-options.fallback_version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_scout_network_cost/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/az_scout_network_cost/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
